--- a/ltNativeInstallBanner.less
+++ b/ltNativeInstallBanner.less
@@ -65,3 +65,51 @@ homepage-banner-platform text {
 	display:        inline-block;
 	-webkit-filter: opacity(.7);
 	}
+
+.homepage-banner-button {
+	margin-top: -6px;
+	outline: none;
+	text-decoration: none;
+	}
+
+.btn {
+	transition: background-color .3s cubic-bezier(.25,.46,.45,.94);
+	-moz-transition: background-color .3s cubic-bezier(.25,.46,.45,.94);
+	-ms-transition: background-color .3s cubic-bezier(.25,.46,.45,.94);
+	-o-transition: background-color .3s cubic-bezier(.25,.46,.45,.94);
+	-webkit-transition: background-color .3s cubic-bezier(.25,.46,.45,.94);
+	z-index: 2;
+	display: inline-block;
+	vertical-align: top;
+	margin: 0;
+	padding: 0;
+	border: none;
+	background-color: transparent;
+	font-weight: 400;
+	text-align: center;
+	text-transform: uppercase;
+	cursor: pointer;
+	}
+.btn--m {
+	padding-left: 14px;
+	padding-right: 14px;
+	font-size: 13px;
+	font-size: .8125rem;
+	line-height: 36px;
+	}
+.btn--raised {
+	border-radius: 2px;
+	box-shadow: 0 3px 1px -2px rgba(0,0,0,.14),0 2px 2px 0 rgba(0,0,0,.098),0 1px 5px 0 rgba(0,0,0,.084);
+	-webkit-transition-property: box-shadow;
+	-moz-transition-property: box-shadow;
+	transition-property: box-shadow;
+	-webkit-transition-duration: .2s;
+	-moz-transition-duration: .2s;
+	transition-duration: .2s;
+	}
+.btn--raised.btn--green {
+	color: #FFF;
+	background-color: #4CAF50;
+	}
+
+
